--- a/potos.css
+++ b/potos.css
@@ -3,3 +3,15 @@ img{
   float: left;
   margin: 1.6666666%;
 }
+
+p{
+  font-family: Raleway;
+  font-size: 23px;
+  margin-left: 1.6666%;
+  font-weight: 800;
+  text-transform: uppercase;
+  border-bottom: 3px solid #f1f1f1;
+  padding-bottom: 20px;
+  width: 30%;
+  padding-bottom:
+}
