--- a/07_Image_Gallery/gallery.css
+++ b/07_Image_Gallery/gallery.css
@@ -1,3 +1,18 @@
 body{
   padding-top: 70px;
 }
+
+.jumbotron{
+  color: #2c3e50;
+}
+
+.navbar-inverse{
+  background-color: #2c3e50;
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
