--- a/Project/style.css
+++ b/Project/style.css
@@ -11,7 +11,6 @@ body{
 #mainnavbar .nav-link{
   color: white;
 }
-
 #mainnavbar .nav-link:hover{
   color: #EA1C2C;
 }
@@ -24,6 +23,20 @@ body{
 #hand{
   padding-left: 0;
   padding-right: 0;
+}
+
+.navbar .navbar-toggler:hover {
+    background-color: #f7b0cd;
+}
+
+.bada{
+  font-size: 3.5rem;
+}
+
+@media (max-width:1150px) {
+  .bada{
+    font-size: 2.5rem;
+  }
 }
 /* .navbar-custom{
   background-color: transparent;
