About to finish the page

--- a/Project/style.css
+++ b/Project/style.css
@@ -1,43 +1,62 @@
-body{
+body {
   background-color: #f5d9df;
   font-family: "Nunito", sans-serif;
 }
 
-#mainnavbar .navbar-brand{
+#mainnavbar .navbar-brand {
   color: #EA1C2C;
   font-size: 1.5rem;
   font-weight: 100;
 }
-#mainnavbar .nav-link{
+
+#mainnavbar .nav-link {
   color: white;
 }
-#mainnavbar .nav-link:hover{
+
+#mainnavbar .nav-link:hover {
   color: #EA1C2C;
 }
 
-#mainnavbar{
+#mainnavbar {
   font-size: 1.5rem;
   font-weight: 20;
   padding-top: 0;
 }
-#hand{
+
+#hand {
   padding-left: 0;
   padding-right: 0;
 }
 
 .navbar .navbar-toggler:hover {
-    background-color: #f7b0cd;
+  background-color: #f7b0cd;
 }
 
-.bada{
+.bada {
   font-size: 3.5rem;
 }
 
 @media (max-width:1150px) {
-  .bada{
+  .bada {
     font-size: 2.5rem;
   }
 }
+
+h2 {
+  color: #EA1C2C;
+}
+
+.blurb p {
+  color: #f498b8;
+  font-size: 1.125rem;
+  line-height: 2;
+  margin-bottom: 70px;
+}
+
+.content {
+  margin-top: 140px;
+}
+
 /* .navbar-custom{
   background-color: transparent;
 } */
