--- a/RGB Color guessing game/game.css
+++ b/RGB Color guessing game/game.css
@@ -1,16 +1,27 @@
+html{
+  height: 100%;
+  width: 100%;
+}
 body {
   background-color: #232323;
+  width: 100%;
+  height: 100%;
 }
 
 .square {
-  max-width: 100%;
-  max-height: 100%;
-  height: 300px;
-  width: 300px;
-  border: 1px solid #000;
-  float: left;
+  height: 30%;
+  width: 30%;
+  /* border: 1px solid #000; */
+  float:left;
   margin: 1.66%;
-  padding-left: 300px;
+  padding-top: 15%;
+  padding-bottom: 15%;
+  /* padding-left: 30%; */
+}
+
+#cont{
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 #one {
