--- a/RGB Color guessing game/game.css
+++ b/RGB Color guessing game/game.css
@@ -1,32 +1,96 @@
-html{
+html {
   height: 100%;
   width: 100%;
+  /* margin: 0; */
 }
+
 body {
   background-color: #232323;
   width: 100%;
   height: 100%;
+  margin: 0;
 }
 
-.header{
-  /* padding-top: 30px; */
-  /* padding-bottom: 30px; */
-  background-color:#66ccff;
-  height: 20%;
+h1 {
+  background-color: Blue;
+  margin: 0;
+  font-weight: normal;
+  text-transform: uppercase;
+  font-family: 'Alegreya Sans';
+  line-height: 1.1;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.butt {
+  text-align: center;
+  background-color: white;
+  margin: 0;
+  height: 30px;
+  outline: none;
+  /* text-align: justify; */
+  /* padding-top: 50%; */
+}
+
+button {
+  background-color: "";
+  border: none;
+  background-repeat: no-repeat;
+  height: 100%;
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 18px;
+  margin: 0;
+  padding: 0;
+  color: steelblue;
+  /* padding-bottom: 9px; */
+}
+
+button:hover {
+  background-color: blue !important;
+  color: white;
+  padding: 0;
+  margin: 0;
+  /* padding-bottom: 9px; */
+  /* height: 100%; */
+  /* margin: 0; */
+  /* font-size: 20px; */
+}
+
+#rgb {
+  font-size: 200%;
+}
+
+.tryclicked {
+  margin-left: 50px;
+}
+
+#spac {
+  margin-left: 5px;
+  margin-right: 20px;
+  /* margin-top: 3px; */
+  font-family: Alegreya Sans;
+  background: None;
+  /* align:justify; */
+}
+
+#try {
+  margin-left: 20px;
+  margin-right: 5px;
 }
 
 .square {
+  border-radius: 25px;
   height: 30%;
   width: 30%;
-  /* border: 1px solid #000; */
-  float:left;
+  float: left;
   margin: 1.66%;
   padding-top: 15%;
   padding-bottom: 15%;
-  /* padding-left: 30%; */
+  box-shadow: 4px 4px 5px;
 }
 
-#cont{
+#cont {
   max-width: 600px;
   margin: 0 auto;
 }
