--- a/Project-ToDoList/Assets/css/todo.css
+++ b/Project-ToDoList/Assets/css/todo.css
@@ -1,3 +1,15 @@
 body{
     background-color: blueviolet;
+    /* align:centre; */
+}
+
+#container{
+    background-color: cadetblue;
+    width: 360px;
+    margin: auto;
+}
+
+.completed{
+    color: gray;
+    text-decoration: line-through;
 }
