Included header.ejs and footer.ejs in love.ejs

--- a/Moretoexpress/demo/views/home.ejs
+++ b/Moretoexpress/demo/views/home.ejs
@@ -1,3 +1,8 @@
+<!-- Include header template -->
+<link rel="stylesheet" href="app.css">
+
 <h1>This is the homepage</h1>
 
 <img src="https://images.pexels.com/photos/1029844/pexels-photo-1029844.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
+<!-- Include footer template -->
+
