--- a/Moretoexpress/PostRequestDemo/views/friends.ejs
+++ b/Moretoexpress/PostRequestDemo/views/friends.ejs
@@ -10,6 +10,6 @@
 <!-- This form will take the input -->
 
 <form action="/addfriend" method="POST">
-    <input type="text" placeholder="name">
+    <input type="text" name="newfriend" placeholder="name">
     <button>Add friend</button>
 </form>
